@@ -1,3 +1,8 @@
+Wed Oct  8 22:34:58 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tests/ClientPortSpan/client.cpp:
+          Clean up windows build.
+
 Wed Oct  8 20:14:18 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tao/IIOP_Connector.cpp:
